--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "functions": {
-        "hostel/**/*.php": { "runtime": "vercel-php@0.6.0" }
+        "api/**/*.php": { "runtime": "vercel-php@0.6.0" }
     },
     "routes": [
-        { "src": "/(.*)", "dest": "/hostel/" }
+        { "src": "/(.*)", "dest": "/api/hostel/$1" }
     ]
 }
